--- a/requirements.yml
+++ b/requirements.yml
@@ -3,24 +3,36 @@ functional:
   - 1. website must have main page
   - 1.1 main page must contain a Header
   - 1.1.1 Header must contain logo, brand name, user's menu
+  - 1.1.2 Header must contain brand name
+  - 1.1.3 Header must contain user's menu
   - 1.2 main page must contain "Create a game" button
-  - 1.3 main page must contain side bar, which contain "lobby", "Tournaments", "Completed Games" with the ability to switch between them
+  - 1.3 main page must contain game side bar
+  - 1.3.1 side bar must contain "lobby"
+  - 1.3.1 side bar must contain "Tournaments"
+  - 1.3.1 side bar must contain "Completed Games"
+  - 1.3.1 user must be able to switch between "lobby", "Tournaments", "Completed Games"
   - 1.4 main page must contain Chat side bar
   - 1.4.1 it must be possible to switch between "General" and "Notification" in the Chat
   - 1.5 main page must contain "LEADERBOARD"
   - 1.6 main page must contain a footer.
   - 2. website must have separate page for unsigned users
-  - 2.1 website must have "sing in", "sign up" and "try a simple battle" buttoms on the unsigned users page
+  - 2.1 website must have "sing in" buttom on the unsigned users page
+  - 2.2 website must have "sign up" buttom on the unsigned users page
+  - 2.3 website must have "try a simple battle" buttom on the unsigned users page
   - 3. website must have Sign up page
-  - 3.1 user must be able to sign up with Github or Discord or via email
-  - 3.2 it must be imposibble to register more than one profile with the same name or email
-  - 3.3 email must be like "%@%.%"
-  - 3.4 name must be longer than 6 charters
-  - 3.5 password must be longer than 6 charters , less than 16 characters and must have one special character
+  - 3.1 user must be able to sign up with Github
+  - 3.2 user must be able to sign up with Discord
+  - 3.3 user must be able to sign up via email
+  - 3.4 it must be imposibble to register more than one profile with the same name or email
+  - 3.5 email must be like "%@%.%"
+  - 3.6 name must be longer than 6 charters
+  - 3.7 password must be longer than 6 charters , less than 16 characters and must have one special character
   - 4. website must have Sign in page
-  - 4.1 user must be able to sign in with Github or Discord or via email
-  - 4.2 during Sign In attempt with incorrect password web page must show "INVALID_PASSWORD" error into log in side bar
-  - 4.3 during Sign In attempt with incorrect email web page must show "EMAIL_NOT_FOUND" error into log in side bar
+  - 4.1 user must be able to sign in with Github
+  - 4.2 user must be able to sign in with Discord
+  - 4.3 user must be able to sign in via email
+  - 4.4 during Sign In attempt with incorrect password web page must show "INVALID_PASSWORD" error into log in side bar
+  - 4.5 during Sign In attempt with incorrect email web page must show "EMAIL_NOT_FOUND" error into log in side bar
   - 5. user must be able to change user name
   - 6. user must be able to connect Github after registration
   - 7. user must be able to connect Discord after registration
